# toon-rust

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PREPARE_FOR_PUBLISH.md  PR_DESCRIPTION.md  PUBLISHING.md  QUICK_START.md  README.md  ROADMAP.md  SECURITY.md  debug_test  setup-publish.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs-simple.yml
docs/: index.md
examples/: advanced.rs  basic.rs  serde.rs  streaming.rs
src/: decode.rs  encode.rs  error.rs  lib.rs  options.rs  serde_api.rs  simd.rs
tests/: decode.rs  encode.rs  roundtrip.rs  serde.rs  streaming.rs
